# AutoRepairEstimator

./: .flake8  .gitignore  README.md  pyproject.toml  run.sh
.github/workflows/: ci.yml
docker/: Dockerfile.backend  Dockerfile.bot  Dockerfile.ml_worker  Dockerfile.nginx  docker-compose.yml  init.sql
docker/models/: README.md
docker/nginx/: nginx.conf
docs/: user_guide.md
docs/ml/: annotation_and_training_guide.md
docs/uml/: activity_ml_photo_upload.puml
latex/: .gitignore  README.md  main.tex  mthesis.cls
latex/bib/: bibliography.bib
latex/docs/: install.md  params.md  structure.md
latex/samples/asu_bachelor_thesis/: README.md  main.tex
latex/samples/asu_bachelor_thesis/bib/: bibliography.bib
latex/samples/thesis_sample/: README.md  main.tex  mthesis.cls
latex/samples/thesis_sample/sections/: abstract.tex  acronyms.tex  appendix.tex  conclusion.tex  introduction.tex
latex/samples/thesis_sample/sources/: code.py
latex/sections/: 1_nti.tex  2_struct_analysis.tex  3_tech_analysis.tex  4_task.tex  5_architect_technical_solution.tex  6_math.tex  7_algorithm.tex  8_program_impl.tex  9_results.tex  abstract.tex  conclusion.tex  introduction.tex
latex/sections/images/: Общая схема.md
ml/: evaluate.py  export_model.py  train_damages.py  train_parts.py
ml/data/: damages.yaml  parts.yaml
reports/: load_120rps.json  load_200rps.json  load_50rps.json
scripts/: crop_parts_for_damage_dataset.py  load_test.py  run_integration_tests.ps1  run_integration_tests.sh
scripts/ml/: README.md  audit_dataset.py  colab_train.ipynb  plot_training_curves.py  split_dataset.py  train_config.py  train_damages.py  train_parts.py
source/api_service/misis_scenario_api/: setup.py
source/inference_service/misis_inference/: pyproject.toml  setup.py
source/orchestrator_service/misis_orchestrator/: setup.py
source/runner_service/misis_runner/: setup.py
src/auto_repair_estimator/: __init__.py
src/auto_repair_estimator/backend/: __init__.py  api.py  config.py  main.py
src/auto_repair_estimator/backend/use_cases/: calculate_pricing.py  manage_damages.py  process_inference_result.py  repair_requests.py
src/auto_repair_estimator/backend/workers/: heartbeat_checker.py  inference_result_consumer.py  outbox_flusher.py
src/auto_repair_estimator/bot/: backend_client.py  config.py  damage_grouping.py  damage_list_format.py  labels.py  main.py  notification_consumer.py  part_selection_send.py  session_lifecycle.py  vk_limits.py
src/auto_repair_estimator/bot/handlers/: damage_edit.py  manual_flow.py  photo.py  pricing.py  start.py
src/auto_repair_estimator/bot/keyboards/: damage_edit.py  damage_type_selection.py  mode_selection.py  part_selection.py  start.py
src/auto_repair_estimator/ml_worker/: __init__.py  config.py  main.py  s3_client.py
src/auto_repair_estimator/ml_worker/inference/: composer.py  cropper.py  damage_detector.py  mask_artifacts.py  parts_detector.py  preprocessor.py  result_publisher.py
tests/: conftest.py  test_health_endpoints.py
tests/integration/: conftest.py
tests/integration/backend/api/: test_active_request_endpoint.py  test_api_input_validation.py  test_api_with_database.py  test_damages_api.py  test_requests_api.py
tests/integration/backend/repositories/: test_damage_repository.py  test_repair_request_repository.py
tests/integration/backend/workers/: test_outbox_flusher_integration.py
tests/unit/backend/adapters/: test_in_memory_repositories.py  test_qa_postgres_pricing_repo_column_mapping.py
tests/unit/backend/domain/: test_damage_aggregator.py  test_damage_type_spec_coverage.py  test_image_validator.py  test_ml_thresholds.py  test_part_damage_compatibility.py  test_pricing_service.py  test_qa_image_validator_attacks.py  test_qa_pricing_matches_thesis_tables.py  test_qa_pricing_rule_range_invariants.py  test_qa_pricing_service_notes_unpriced_damages.py  test_qa_pricing_user_scenario_aggregation.py  test_qa_repair_request_idempotency_key.py  test_qa_repair_request_timestamps_and_status.py  test_request_state_machine.py  test_state_machine_adversarial.py
tests/unit/backend/use_cases/: test_abandon_request_use_case.py  test_calculate_pricing.py  test_damage_uniqueness_invariant.py  test_edit_damage_part_reassignment.py  test_manage_damages.py  (+11 more)
tests/unit/bot/: test_active_session_nudge.py  test_backend_client.py  test_damage_grouping.py  test_damage_list_format.py  test_group_actions.py  test_handlers.py  test_keyboards.py  test_labels.py  test_main_dispatch.py  test_notification_consumer.py  test_onboarding_and_reject.py  test_photo_handler_partial_failures.py  test_qa_callback_handlers_handle_malformed_payload.py  test_qa_damage_edit_keyboard_respects_vk_limits.py  test_qa_labels_cover_all_enum_values.py  test_session_lifecycle.py  test_ux_round_fixes.py
tests/unit/ml_worker/: test_composer.py  test_composer_adversarial.py  test_composer_crop_box_placement.py  test_cropper.py  test_cropper_bbox_robustness.py  test_damage_detector.py  test_damage_detector_part_compatibility.py  test_main_diagnostic_artifacts.py  test_mask_artifacts.py  test_parts_detector.py  test_preprocessor.py
(+49 files in other folders)
