[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-repair-estimator"
version = "0.1.0"
description = "Telegram bot and backend for auto body repair cost estimation with optional ML pipeline."
requires-python = ">=3.11"
authors = [
  { name = "AutoRepairEstimator Developer" }
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "aiogram>=3.4.0",
  "aiokafka>=0.10.0",
  "asyncpg>=0.29.0",
  "minio>=7.2.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.2.0",
  "numpy>=1.26.0",
  "Pillow>=10.0.0",
  "opencv-python-headless>=4.8.0",
  "ultralytics>=8.0.0",
  "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
  "mypy>=1.9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "B",
  "C4",
  "UP",
  "SIM",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
  "-v",
  "--strict-markers",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

